--- a/Winaero.ini
+++ b/Winaero.ini
@@ -22,6 +22,7 @@ pageDisableWindowsInk=1
 pageEdgePreloading=1
 pageIEExtraButtons=1
 pageDisableTelemetry=1
+pageContextMenuRemoveDefault=1
 [pageAdsUnwantedApps]
 UnwantedAppsDisabled=1
 FileExplorerAdsDisabled=1
@@ -48,4 +49,7 @@ AllowTabPreloading=0
 AllowPrelaunch=0
 [pageIEExtraButtons]
 HideNewEdgeButton=1
-NoHelpItemSendFeedback=1
+NoHelpItemSendFeedback=0
+[pageContextMenuRemoveDefault]
+IsExtractAllRemoved=1
+IsShareWithSkypeRemoved=1
