--- a/dotfiles/mpv.conf
+++ b/dotfiles/mpv.conf
@@ -1,3 +1,11 @@
+osc=no
+
+[Idle]
+profile-cond=p["idle-active"]
+profile-restore=copy-equal
+title=' '
+keepaspect=no
+background=1
 [extension.webm]
 loop-file=inf
 [extension.mp4]
@@ -6,3 +14,4 @@ loop-file=inf
 loop-file=inf
 [extension.mkv]
 loop-file=inf
+hwdec=auto
