Changed mpv theme, wallpaper script in bin, desktop file

--- a/dotfiles/mpv.conf
+++ b/dotfiles/mpv.conf
@@ -1,11 +1,4 @@
 osc=no
-
-[Idle]
-profile-cond=p["idle-active"]
-profile-restore=copy-equal
-title=' '
-keepaspect=no
-background=1
 [extension.webm]
 loop-file=inf
 [extension.mp4]
@@ -15,3 +8,6 @@ loop-file=inf
 [extension.mkv]
 loop-file=inf
 hwdec=auto
+
+# Optimized shaders for higher-end GPU: Mode A (HQ)
+glsl-shaders="~~/shaders/Anime4K_Clamp_Highlights.glsl:~~/shaders/Anime4K_Restore_CNN_VL.glsl:~~/shaders/Anime4K_Upscale_CNN_x2_VL.glsl:~~/shaders/Anime4K_AutoDownscalePre_x2.glsl:~~/shaders/Anime4K_AutoDownscalePre_x4.glsl:~~/shaders/Anime4K_Upscale_CNN_x2_M.glsl"
