--- a/ansible/arch.yaml
+++ b/ansible/arch.yaml
@@ -127,7 +127,9 @@
         insertafter: "^\\[multilib\\]"
         regexp: "Include = /etc/pacman.d/mirrorlist"
     - name: Actualizar los repositorios
-      command: pacman -Syu
+      community.general.pacman:
+      update_cache: true
+      upgrade: true
     # 2. Configuración de makepkg.conf
     - name: Ajustar configuración de makepkg.conf
       ansible.builtin.lineinfile:
@@ -147,7 +149,7 @@
 
     # 3. Instalación de paquetes
     - name: Instalar paquetes disponibles
-      ansible.builtin.package:
+      community.general.pacman:
         name: "{{ pkgs }}"
         state: present
 
