--- a/ansible/arch.yaml
+++ b/ansible/arch.yaml
@@ -100,6 +100,7 @@
   tasks:
     # 1. Configuración de pacman.conf
     - name: Activar opciones en pacman.conf
+      become: yes
       ansible.builtin.lineinfile:
         path: /etc/pacman.conf
         regexp: "^#{{ item }}"
@@ -112,6 +113,7 @@
         - "ParallelDownloads = 20"
       notify: Actualizar multilib
     - name: "add multilib"
+      become: yes
       lineinfile:
         dest: "/etc/pacman.conf"
         state: "present"
@@ -119,6 +121,7 @@
         regexp: "^\\[multilib\\]"
         insertafter: "^#\\[multilib\\]"
     - name: "add multilib (cont)"
+      become: yes
       lineinfile:
         dest: "/etc/pacman.conf"
         state: "present"
@@ -126,11 +129,13 @@
         insertafter: "^\\[multilib\\]"
         regexp: "Include = /etc/pacman.d/mirrorlist"
     - name: Actualizar los repositorios
+      become: yes
       community.general.pacman:
         update_cache: true
         upgrade: true
     # 2. Configuración de makepkg.conf
     - name: Ajustar configuración de makepkg.conf
+      become: yes
       ansible.builtin.lineinfile:
         path: /etc/makepkg.conf
         regexp: "{{ item.regexp }}"
