--- a/ansible/arch.yaml
+++ b/ansible/arch.yaml
@@ -338,15 +338,18 @@
         masked: false
         
     # 11. Instalar yay desde AUR
-    - name: Clonar repositorio de yay
-      ansible.builtin.git:
-        repo: https://aur.archlinux.org/yay.git
-        dest: $HOME/yay
-
-    - name: Construir e instalar yay
-      ansible.builtin.command: makepkg -si --noconfirm
-      args:
-        chdir: $HOME/yay
+    - name: Clone yay
+      git:
+        repo: https://aur.archlinux.org/yay-bin.git
+        dest: "/tmp/yay"
+        update: true
+    
+    - name: Build and install yay
+      command:
+        chdir: "/tmp/yay"
+        cmd: "makepkg -sfi --noconfirm"
+        creates: /usr/bin/yay
+        
   handlers:
     - name: Actualizar multilib
       ansible.builtin.lineinfile:
