--- a/ansible/arch.yaml
+++ b/ansible/arch.yaml
@@ -135,22 +135,17 @@
         upgrade: true
     # 2. Configuración de makepkg.conf
     - name: Ajustar configuración de makepkg.conf
-      become: yes
-      ansible.builtin.lineinfile:
+      bacome: yes
+      ansible.builtin.blockinfile:
         path: /etc/makepkg.conf
-        regexp: "{{ item.regexp }}"
-        line: "{{ item.line }}"
-        state: present
-        backrefs: yes
-      loop:
-        - { regexp: "^#BUILDDIR=.*", line: "BUILDDIR=/tmp/makepkg" }
-        - { regexp: "^PKGEXT.*", line: "PKGEXT='.pkg.tar'" }
-        - { regexp: "^OPTIONS=.*", line: "OPTIONS=(docs !strip !libtool !staticlibs emptydirs zipman purge !debug lto)" }
-        - { regexp: "-march=.* -mtune=generic", line: "-march=native" }
-        - { regexp: "^#RUSTFLAGS=.*", line: 'RUSTFLAGS="-C opt-level=2 -C target-cpu=native"' }
-        - { regexp: "^#MAKEFLAGS=.*", line: 'MAKEFLAGS="-j{{ ansible_processor_vcpus | int - 1 }}"' }
-
-
+        marker: "# ANSIBLE-MANAGED BLOCK"
+        block: |
+          BUILDDIR=/tmp/makepkg
+          PKGEXT='.pkg.tar'
+          OPTIONS=(docs !strip !libtool !staticlibs emptydirs zipman purge !debug lto)
+          CFLAGS="-march=native"
+          RUSTFLAGS="-C opt-level=2 -C target-cpu=native"
+          MAKEFLAGS="-j{{ ansible_processor_vcpus | int - 1 }}"
     # 3. Instalación de paquetes
     - name: Instalar paquetes disponibles
       become: yes
