--- a/ansible/arch.yaml
+++ b/ansible/arch.yaml
@@ -8,95 +8,94 @@
     scriptsv: "https://raw.githubusercontent.com/Ciberbago/ciber-scripts/main/scripts"
     sdconfig: "https://raw.githubusercontent.com/Ciberbago/ciber-scripts/main/systemd"
     pkgs:
-      - adw-gtk-theme
-      - android-tools
-      - baobab
-      - base-devel
-      - bat
-      - bluez
-      - bluez-utils
-      - btop
-      - dkms
-      - ethtool
-      - eza
-      - fastfetch
-      - ffmpegthumbnailer
-      - file-roller
-      - firefox
-      - fish
-      - fisher
-      - flameshot
-      - fragments
-      - freerdp
-      - fzf
-      - gdm
-      - gdu
-      - git
-      - gnome-bluetooth-3.0
-      - gnome-calculator
-      - gnome-characters
-      - gnome-control-center
-      - gnome-disk-utility
-      - gnome-font-viewer
-      - gnome-keyring
-      - gnome-remote-desktop
-      - gnome-shell
-      - gnome-tweaks
-      - gnome-text-editor
-      - gvfs
-      - gvfs-smb
-      - handbrake
-      - imagemagick
-      - jre8-openjdk
-      - jre17-openjdk
-      - jre21-openjdk
-      - jq
-      - iperf3
-      - less
-      - libmad
-      - libva-mesa-driver
-      - linux-headers
-      - linux-lts
-      - mangohud
-      - micro
-      - mpv-mpris
-      - nautilus
-      - net-tools
-      - nnn
-      - noto-fonts-cjk
-      - ntfs-3g
-      - pacman-contrib
-      - p7zip
-      - pkgfile
-      - python-tqdm
-      - qt5ct
-      - qt6-base
-      - radeontop
-      - reflector
-      - remmina
-      - resources
-      - rocm-smi-lib
-      - rust
-      - scrcpy
-      - shotwell
-      - smbclient
-      - steam
-      - tailscale
-      - tilix
-      - traceroute
-      - ttf-firacode-nerd
-      - tumbler
-      - uget
-      - unrar
-      - usbutils
-      - virtualbox
-      - virtualbox-guest-iso
-      - vulkan-radeon
-      - wget
-      - wl-clipboard
-      - xdg-desktop-portal-gnome
-      - yt-dlp
-
+      - extra/adw-gtk-theme
+      - extra/android-tools
+      - extra/baobab
+      - core/base-devel
+      - extra/bat
+      - extra/bluez
+      - extra/bluez-utils
+      - extra/btop
+      - extra/dkms
+      - extra/ethtool
+      - extra/eza
+      - extra/fastfetch
+      - extra/ffmpegthumbnailer
+      - extra/file-roller
+      - extra/firefox
+      - extra/fish
+      - extra/fisher
+      - extra/flameshot
+      - extra/fragments
+      - extra/freerdp
+      - extra/fzf
+      - extra/gdm
+      - extra/gdu
+      - extra/git
+      - extra/gnome-bluetooth-3.0
+      - extra/gnome-calculator
+      - extra/gnome-characters
+      - extra/gnome-control-center
+      - extra/gnome-disk-utility
+      - extra/gnome-font-viewer
+      - extra/gnome-keyring
+      - extra/gnome-remote-desktop
+      - extra/gnome-shell
+      - extra/gnome-tweaks
+      - extra/gnome-text-editor
+      - extra/gvfs
+      - extra/gvfs-smb
+      - extra/handbrake
+      - extra/imagemagick
+      - extra/jre8-openjdk
+      - extra/jre17-openjdk
+      - extra/jre21-openjdk
+      - extra/jq
+      - extra/iperf3
+      - extra/less
+      - extra/libmad
+      - extra/libva-mesa-driver
+      - core/linux-headers
+      - core/linux-lts
+      - extra/mangohud
+      - extra/micro
+      - extra/mpv-mpris
+      - extra/nautilus
+      - extra/net-tools
+      - extra/nnn
+      - extra/noto-fonts-cjk
+      - extra/ntfs-3g
+      - extra/pacman-contrib
+      - extra/p7zip
+      - extra/pkgfile
+      - extra/python-tqdm
+      - extra/qt5ct
+      - extra/qt6-base
+      - extra/radeontop
+      - extra/reflector
+      - extra/remmina
+      - extra/resources
+      - extra/rocm-smi-lib
+      - extra/rust
+      - extra/scrcpy
+      - extra/shotwell
+      - extra/smbclient
+      - multilib/steam
+      - extra/tailscale
+      - extra/tilix
+      - extra/traceroute
+      - extra/ttf-firacode-nerd
+      - extra/tumbler
+      - extra/uget
+      - extra/unrar
+      - extra/usbutils
+      - extra/virtualbox
+      - extra/virtualbox-guest-iso
+      - extra/vulkan-radeon
+      - extra/wget
+      - extra/wl-clipboard
+      - extra/xdg-desktop-portal-gnome
+      - extra/yt-dlp
   tasks:
     # 1. Configuración de pacman.conf
     - name: Activar opciones en pacman.conf
